# picodocs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO  TODO.md  justfile  picodocs.toml  picodocs.yml
.github/workflows/: release.yml  site.yml
docs/: banner.typ  benchmark.csv  benchmark_plot.typ  index.md  output  style.css
docs/getting-started/: index.md  installation.md
src/: args.rs  assets.rs  config.rs  main.rs
src/commands/: build.rs  defaults.rs  mod.rs  serve.rs
templates/: base.html
