[package]
name = "picodocs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/sermuns/picodocs"
license-file = "LICENSE"
keywords = ["documentation", "docs", "markdown", "static", "site", "generator"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = ["src/**/*", "assets/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4.5.40", features = ["derive"] }
confique = { version = "0.3.0", features = ["toml"] }
notify = "8.1.0"
once_cell = "1.21.3"
open = "5.3.2"
pulldown-cmark = "0.13.0"
serde = "1.0.219"
tera = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9.0"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-livereload = "0.9.6"
walkdir = "2.5.0"
