[package]
name = "picodocs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/sermuns/picodocs"
license-file = "LICENSE"
keywords = ["documentation", "docs", "markdown", "static", "site", "generator"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = ["src/**/*", "assets/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5.40", features = ["cargo", "derive"] }
clap_complete = "4.5.55"
confique = { version = "0.3.0", features = ["toml", "yaml"] }
futures = "0.3.31"
hyper = "1.6.0"
mime_guess = "2.0.5"
notify = "8.1.0"
notify-debouncer-full = "0.5.0"
once_cell = "1.21.3"
open = "5.3.2"
pulldown-cmark = "0.13.0"
serde = "1.0.219"
serde_yaml = "0.9.34"
tera = "1"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.9.0"
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
